<resources>
    <string name="app_name">SLIC</string>
    <string name="description_info">Info</string>
    <string name="request_permission">Diese App benötigt Zugriff auf die Kamera.</string>
    <string name="camera_error">Dieses Gerät unterstützt nicht die Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Benutze NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string name="device">Gerät:</string>

    <string name="target_square_preference_text">Zielrechteck zeichnen</string>
    <string name="send_and_collect_data_preference_summary">Einstellungen zum Sammeln und Senden von Daten</string>
    <string name="send_and_collect_data_preference_title">Daten sammeln und senden</string>
    <string name="send_data_preference_text">Daten beim beenden der App senden</string>
    <string name="collect_data_preference_text">Bilder und Daten sammeln</string>
    <string name="target_square_preference_key">target_square_preference_key</string>
    <string name="common_settings_title">Allgemeine Einstellungen</string>

    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="set">Setzen</string>
    <string name="patient_data_input_title">Eingabe der Patientendaten</string>
    <string name="choose_number">Bitte Nummer auswählen</string>
    <string name="choose_list">Bitte Eintrag auswählen</string>

    <string name="collect_data_preference_key" translatable="false">collect_data_preference_key</string>
    <string name="send_data_preference_key" translatable="false">send_data_preference_key</string>
    <string name="exit">Beenden</string>
    <string name="inferenceTime">Inferenze Zeit:</string>
    <string name="rotation">Rotation</string>
    <string name="cropResolution">Ausschnitt-Auflösung</string>
    <string name="previewResolution">Vorschau-Auflösung</string>
    <string name="choose_resolution">Auflösung auswählen</string>

    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="channel_id" translatable="false">SLICChannelID</string>
    <string name="notification_name" translatable="false">SLICNotificationID</string>
    <string name="notification_description" translatable="false">SLIC Notification ID</string>
    <string name="initialSetup" translatable="false">initialSetupKey</string>
    <string name="allow_updates_preference_key" translatable="false">allow_updates_preference_key</string>
    <string name="loading">Lade…</string>

    <string name="app_updater_switch_preference_title">App Updates automatisch suchen</string>
    <string name="app_updater_switch_preference_key" translatable="false">app_updater_switch_preference_key</string>
    <string name="app_updater_interval_preference_title">App Updates Such-Intervall</string>
    <string name="app_updater_interval_preference_key" translatable="false">app_updater_interval_preference_key</string>
    <string name="app_updater_server_preference_title">Server für App Updates</string>
    <string name="app_updater_server_preference_key" translatable="false">app_updater_server_preference_key</string>

    <string name="kernel_updater_switch_preference_title">Modell Updates automatisch suchen</string>
    <string name="kernel_updater_switch_preference_key" translatable="false">kernel_updater_switch_preference_key</string>
    <string name="kernel_updater_switch_install_preference_title">Modell Updates automatisch installieren</string>
    <string name="kernel_updater_switch_install_preference_key" translatable="false">kernel_updater_switch_install_preference_key</string>
    <string name="kernel_updater_interval_preference_title">Modell Update Such-Intervall</string>
    <string name="kernel_updater_interval_preference_key" translatable="false">kernel_updater_interval_preference_key</string>
    <string name="kernel_updater_server_preference_title">Server für Modell Updates</string>
    <string name="kernel_updater_server_preference_key" translatable="false">kernel_updater_server_preference_key</string>
    <string name="updater_preferences_category_title">Update Einstellungen</string>
    <string name="send_data_preference_server_key">send_data_preference_server_key</string>
    <string name="send_data_preference_server_text">Server für Datenannahme</string>
</resources>
