<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/common_settings_title">

        <SwitchPreference
            android:key="@string/target_square_preference_key"
            android:title="@string/target_square_preference_text"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/send_and_collect_data_preference_summary"
        android:title="@string/send_and_collect_data_preference_title" >

        <SwitchPreference
            android:key="@string/send_data_preference_key"
            android:title="@string/send_data_preference_text"
            android:defaultValue="true"/>/>

        <SwitchPreference
            android:key="@string/collect_data_preference_key"
            android:title="@string/collect_data_preference_text"
            android:defaultValue="true"/>/>

    </PreferenceCategory>

</PreferenceScreen>